--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "react-contextmenu",
-  "version": "2.11.0",
+  "name": "@cr4zyc4t/react-contextmenu",
+  "version": "1.0.0",
+  "originVersion": "2.11.0",
   "description": "Context Menu implemented in React",
   "main": "modules/index.js",
   "module": "es6/index.js",
@@ -35,24 +36,24 @@
     "start:server": "http-server public -p 3000",
     "prepublishOnly": "npm run build"
   },
-  "author": "Vivek Kumar Bansal <contact@vkbansal.me>",
+  "author": "ToanVQ <hunter9xbn@gmail.com>",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vkbansal/react-contextmenu.git"
+    "url": "git+https://github.com/cr4zyc4t/react-contextmenu.git"
   },
   "bugs": {
-    "url": "https://github.com/vkbansal/react-contextmenu/issues"
+    "url": "https://github.com/cr4zyc4t/react-contextmenu/issues"
   },
-  "homepage": "https://github.com/vkbansal/react-contextmenu",
+  "homepage": "https://github.com/cr4zyc4t/react-contextmenu#readme",
   "dependencies": {
     "classnames": "^2.2.5",
     "object-assign": "^4.1.0"
   },
   "peerDependencies": {
+    "prop-types": "^15.0.0",
     "react": "^0.14.0 || ^15.0.0 || ^16.0.1",
-    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.1",
-    "prop-types": "^15.0.0"
+    "react-dom": "^0.14.0 || ^15.0.0 || ^16.0.1"
   },
   "devDependencies": {
     "babel-cli": "~6.26.0",
@@ -83,10 +84,10 @@
     "http-server": "~0.11.1",
     "jest": "~21.2.1",
     "jsdom": "~11.3.0",
-    "prop-types": "~15.7.2",
-    "react": "~16.8.4",
-    "react-dom": "~16.8.4",
-    "react-router-dom": "~4.4.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-test-renderer": "~16.8.4",
     "rimraf": "~2.6.3",
     "style-loader": "~0.19.0",
@@ -105,5 +106,10 @@
     "collectCoverageFrom": [
       "**/src/**/*.js"
     ]
+  },
+  "directories": {
+    "doc": "docs",
+    "example": "examples",
+    "test": "tests"
   }
 }
